2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Use AT keyboard on Yeeloong 3A.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Add Yeeloong 3A reboot and halt.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Add Radeon Yeeloong 3A support.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Add bonito 3A support.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/machoXX.c: Fix compilation on non-i386.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/xen_fileXX.c: Silence cast-align.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/macho.c: Fix compilation on non-i386.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Add missing format_arg attribute to check that printf with translated
	messages has proper arguments.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Use grub_xasprintf to format translated error messages containing
	64-bit quantity.

2013-12-17  Jon McCune  <jonmccune@google.com>

	Fix double-free introduced by commit 33d02a42d64cf06cada1c389

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Unify message for unsupported relocation.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Mark miscompile error for translation.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Use %I64 and not %ll when using OS printf if compiling for windows.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Update Mac code to match new register_efi prototype.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement better integration with Mac firmware.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/multiboot_mbi2.c: Implement special value for
	load_addr.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Include serial module in default_payload.elf.

2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Add explicit thumb interwork bx in asm files.
