@@ -1,5 +1,9 @@
 2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Support cpuid --pae.
+
+2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Use AT keyboard on Yeeloong 3A.
 
 2013-12-17  Vladimir Serbinenko  <phcoder@gmail.com>
